--- a/app/scss/pages/_index.scss
+++ b/app/scss/pages/_index.scss
@@ -13,4 +13,6 @@
 @forward "contact";
 @forward "error";
 @forward "commingsoon";
+@forward "sign-in";
 @forward "sign-up";
+@forward "reset-password";
