--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -48,7 +48,13 @@
                     </a>
                     <ul class="sub-menu" id="submenu-9">
                         <li class="sub-menu--item">
+                            <a href="signin.html">Sign In</a>
+                        </li>
+                        <li class="sub-menu--item">
                             <a href="signup.html">Sign Up</a>
+                        </li>
+                        <li class="sub-menu--item">
+                            <a href="forgot.html">Reset Password</a>
                         </li>
                     </ul>
                 </li>
