--- a/app/scss/components/_mixed.scss
+++ b/app/scss/components/_mixed.scss
@@ -1045,3 +1045,107 @@ padding-bottom: 30px;
         }
     }
 }
+.account-form{
+    .form-group{
+        position: relative;
+        margin-bottom: 20px;
+        @media (min-width:575px) {
+            margin-bottom: 30px; 
+        }
+        .form-control{
+            border: 1px solid transparent;
+            border-radius: 3px;
+            font-weight: 500;
+            height: 55px;
+            padding: 20px;
+            padding-right: 40px;
+            color: var(--bs-black);
+            font-size: 16px;
+            @media (min-width:992px) {
+                background: var(--bs-white-lilac);
+            }
+            &::placeholder{
+                color: var(--bs-gray);
+            }
+            &:focus{
+                border-color: var(--bs-primary) ;
+            }
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+        }
+        .icon{
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 20px;
+            svg{
+                display: block;
+            }
+        }
+    }
+    .form-check{
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 25px;
+        @media (min-width:992px) {
+            margin-top: 35px;
+            margin-bottom: 33px;
+        }
+        .form-check-input{
+            min-width: 20px;
+            max-width: 20px;
+            min-height: 20px;
+            max-height: 20px;
+            margin: 0;
+            margin-right: 20px;
+        }
+       .form-check-label{
+        @media (max-width:992px) {
+            color: var(--bs-white) !important;
+        }
+           color: var(--bs-gray);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.277777777777778;
+        @media (min-width:575px) {
+            font-size: 18px;
+        }
+       } 
+    }
+    .form-texts{
+        text-align: center;
+        .text-link,p{
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.277777777777778;
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+        }
+    }
+    .form-texts{
+        p{
+            @media (max-width:992px) {
+                color: var(--bs-white) !important;
+            }
+        }
+    }
+    .form-texts-one{
+        margin: 20px 0;
+    }
+    .form-texts-two{
+        margin-top: 20px;
+    }
+    .form-button{
+        .btn-2{
+            color: var(--bs-gray);
+            &:hover{
+                color: var(--bs-black);
+            }
+        }
+    }
+}
