--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -5,7 +5,7 @@
             </a>
             <ul class="sub-menu" id="submenu-1">
                 <li class="sub-menu--item">
-                    <a href="index.html">Landing 1</a>
+                    <a href="landing-1.html">Landing 1</a>
                 </li>
                 <li class="sub-menu--item">
                     <a href="landing-2.html">Landing 2</a>
