--- a/app/partials/pages/landing-6/_testimonial.njk
+++ b/app/partials/pages/landing-6/_testimonial.njk
@@ -39,14 +39,14 @@
                                         <div class="col-lg-6">
                                             <div class="card-img">
                                                 <figure class="mask-img">
-                                                    <img src="./image/l-6/t-1.png" alt="testimoni" class="mw-100">
+                                                    <img src="./image/l-6/t-2.png" alt="testimoni" class="mw-100">
                                                 </figure>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="card-content">
                                                 <div class="icon">
-                                                    <img src="./image/l-6/google.png" alt="google" class="mw-100">
+                                                    <img src="./image/logo/hubspot.png" alt="google" class="mw-100">
                                                 </div>
                                                 <p>“Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text,  many web sites.</p>
                                                 <span>Michle D. Collins</span>
