fix: menu items text replace on header

--- a/app/scss/pages/_index.scss
+++ b/app/scss/pages/_index.scss
@@ -12,7 +12,7 @@
 @forward "careers-details";
 @forward "contact";
 @forward "error";
-@forward "commingsoon";
+@forward "comingsoon";
 @forward "sign-in";
 @forward "sign-up";
 @forward "reset-password";
