--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -1,26 +1,26 @@
 {% macro render(root, elemroot, hideMegamenu, dropdownStyle2, megamenuPosition) %}
     <ul class="site-menu-main">
         <li class="nav-item nav-item-has-children">
-            <a href="#" class="nav-link-item drop-trigger">Home <i class="fas fa-angle-down"></i>
+            <a href="#" class="nav-link-item drop-trigger">Landing <i class="fas fa-angle-down"></i>
             </a>
             <ul class="sub-menu" id="submenu-1">
                 <li class="sub-menu--item">
-                    <a href="index.html">Landing 1</a>
+                    <a href="index.html">Personal Portfolio</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="landing-2.html">Landing 2</a>
+                    <a href="startup-company.html">Startup Company</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="landing-3.html">Landing 3</a>
+                    <a href="project-management.html">Project Management</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="landing-4.html">Landing 4</a>
+                    <a href="project-management.html">Marketing Agency</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="landing-5.html">Landing 5</a>
+                    <a href="online-course.html">Online Course</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="landing-6.html">Landing 6</a>
+                    <a href="mobile-app.html">Mobile App</a>
                 </li>
             </ul>
         </li>
@@ -66,7 +66,7 @@
                             <a href="error.html">404</a>
                         </li>
                         <li class="sub-menu--item">
-                            <a href="commingsoon.html">Comming Soon</a>
+                            <a href="coming-soon.html">Coming Soon</a>
                         </li>
                         <li class="sub-menu--item">
                             <a href="support.html">Support</a>
