--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1545,3 +1545,41 @@
     }
   }
 }
+// Preview Page Card
+.preview-card{
+  border-radius: 3px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0px 10px 45px rgba(0, 0, 0, 0.03);
+  .card-content{
+    position: absolute;
+    transition: .3s;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    transform: translateY(100%);
+    padding: 17px;
+    display: flex;
+    align-items: center;
+    background: var(--bs-primary);
+    justify-content: center;
+    .title{
+      padding-right: 19px;
+      color: white;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.277777777777778;
+      @media (min-width:575px) {
+        font-size: 18px;
+      }
+    }
+  }
+  &:hover{
+    .card-content{
+      transform: translateY(0);
+    }
+  }
+  &--02{
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.06);
+  }
+}
