add: button animation

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -14,7 +14,7 @@
                     <a href="project-management.html">Project Management</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="project-management.html">Marketing Agency</a>
+                    <a href="marketing-agency.html">Marketing Agency</a>
                 </li>
                 <li class="sub-menu--item">
                     <a href="online-course.html">Online Course</a>
@@ -36,10 +36,10 @@
                     </a>
                     <ul class="sub-menu" id="submenu-9">
                         <li class="sub-menu--item">
-                            <a href="careers.html">Careers</a>
+                            <a href="career.html">Career</a>
                         </li>
                         <li class="sub-menu--item">
-                            <a href="careers-details.html">Careers Details</a>
+                            <a href="career-details.html">Career Details</a>
                         </li>
                     </ul>
                 </li>
