fix: sign in and sign up page link fix

--- a/app/partials/pages/sign-in/_content.njk
+++ b/app/partials/pages/sign-in/_content.njk
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-texts">
-                                    <p class="heading-dark">Don’t have an account? <a class=" text-primary" href="signup.html">Create account</a></p>
+                                    <p class="heading-dark">Don’t have an account? <a class=" text-primary" href="sign-up.html">Create account</a></p>
                                 </div>
                             </div>
                         </form>
