--- a/app/partials/pages/sign-up/_content.njk
+++ b/app/partials/pages/sign-up/_content.njk
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-texts form-texts-two">
-                                    <p class="heading-dark">Already have an account? <a class=" text-primary" href="signin.html">Sign in</a></p>
+                                    <p class="heading-dark">Already have an account? <a class=" text-primary" href="sign-in.html">Sign in</a></p>
                                 </div>
                             </div>
                         </form>
