--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -705,6 +705,7 @@
     display: flex;
     align-items: center;
     .avatar{
+      overflow: hidden;
       margin-right: 20px;
       @include square (60px, 500px);
       img{
@@ -1282,6 +1283,7 @@
       @include size(90px,90px);
     }
       img{
+        border-radius: 3px;
         object-fit: cover;
         width: 100%;
         height: 100%;
