--- a/app/scss/pages/landing-3/_testimonial.scss
+++ b/app/scss/pages/landing-3/_testimonial.scss
@@ -83,6 +83,7 @@
             }
         }
         .avatar{
+          overflow: hidden;
             @include square (30px, 500px);
             margin: auto;
             img{
