add: blog link add

--- a/app/partials/pages/landing-1/_blog.njk
+++ b/app/partials/pages/landing-1/_blog.njk
@@ -49,7 +49,7 @@
         <div class="row card-row justify-content-center">
             {% for item in cardData%}
                 <div class="col-md-6 col-xl-4 single-slider" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="1000">
-                    <a href="#" class="d-block">
+                    <a href="blog.html" class="d-block">
                         {{Card.BlogCardOne({
                         img:item.img,
                         date:item.date,
