fix: animation dlay all page

--- a/app/partials/template.njk
+++ b/app/partials/template.njk
@@ -30,7 +30,7 @@
 
   <body>
    
-      {# {% include "components/preloader.njk" %} #}
+      {% include "components/preloader.njk" %}
     <div class="site-wrapper overflow-hidden">
       {% block main %}{% endblock %}
     </div>
