--- a/app/scss/components/_preloader.scss
+++ b/app/scss/components/_preloader.scss
@@ -12,119 +12,7 @@ $bounce_height: 30px;
   width: 100vw;
   display: flex;
   align-items: center;
-  z-index: 999999;
+  z-index: 9999999999;
   justify-content: center;
-  background: #fff;
-}
-
-.loading {
-  position: absolute;
-  width: $width * 2;
-  height: $height * 2;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  
-.box {
-  width: $width;
-  height: $height;
-  position: absolute;
-
-  &-1 {
-    background-color: #057689;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    animation: box-1_move 1.8s cubic-bezier(0.6, 0.01, 0.4, 1) infinite;
-  }
-
-  &-2 {
-    background-color: #FFBE00;
-    top: 0;
-    right: 0;
-    animation: box-2_move 1.8s cubic-bezier(0.6, 0.01, 0.4, 1) infinite;
-  }
-
-  &-3 {
-    background-color: #020C17;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
-    animation: box-3_move 1.8s cubic-bezier(0.6, 0.01, 0.4, 1) infinite;
-  }
-
-  &-4 {
-    background-color: #01373C;
-    bottom: 0;
-    left: 0;
-    animation: box-4_move 1.8s cubic-bezier(0.6, 0.01, 0.4, 1) infinite;
-  }
-}
-}
-
-
-@keyframes box-1_move {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate(0, $width);
-  }
-  50% {
-    transform: translate($width, $width);
-  }
-  75% {
-    transform: translate($width, 0);
-  }
-}
-
-@keyframes box-2_move {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate(-$width, 0);
-  }
-  50% {
-    transform: translate(-$width, $width);
-  }
-  75% {
-    transform: translate(0, $width);
-  }
-}
-
-@keyframes box-3_move {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate(0, -$width);
-  }
-  50% {
-    transform: translate(-$width, -$width);
-  }
-  75% {
-    transform: translate(-$width, 0);
-  }
-}
-
-@keyframes box-4_move {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-  25% {
-    transform: translate($width, 0);
-  }
-  50% {
-    transform: translate($width, -$width);
-  }
-  75% {
-    transform: translate(0, -$width);
-  }
+  background: #323644;
 }
