--- a/app/partials/components/preloader.njk
+++ b/app/partials/components/preloader.njk
@@ -1,9 +1,6 @@
 
  <div class="preloader-wrapper" id="loader">
-        <div class="loading">
-            <div class="box box-1"></div>
-            <div class="box box-2"></div>
-            <div class="box box-3"></div>
-            <div class="box box-4"></div>
-        </div>
+    <div class="loading">
+        <img src="./image/loading.gif" alt="loading" class="w-100">
+    </div>
 </div>
