--- a/app/partials/pages/landing-1/_qualification.njk
+++ b/app/partials/pages/landing-1/_qualification.njk
@@ -1,14 +1,14 @@
 {% macro render(args) %}
-    <div class="qualification-section-01">
+    <div class="qualification-section-01 overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-10">
-                    <div class="qualification-section-01__content one" data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000">
+                    <div class="qualification-section-01__content one">
                         <div class="section-content-block">
                             <h6 class="subtitle mb-10 text-primary">Qualification</h6>
                             <h2 class="title">My Education</h2>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
@@ -18,7 +18,7 @@
                                 <span class="widget-designations text-primary">Diploma In Computer Eng.</span>
                             </div>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="400">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
@@ -28,7 +28,7 @@
                                 <span class="widget-designations text-primary">BSC in CSE</span>
                             </div>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="600">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
@@ -41,12 +41,12 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-10">
-                    <div class="qualification-section-01__content two" data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000">
+                    <div class="qualification-section-01__content two">
                         <div class="section-content-block">
                             <h6 class="subtitle mb-10 text-primary">Work Experience</h6>
                             <h2 class="title">My Awesome Experience</h2>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
@@ -56,7 +56,7 @@
                                 <span class="widget-designations text-primary">Internship</span>
                             </div>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="400">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
@@ -66,7 +66,7 @@
                                 <span class="widget-designations text-primary">UI/UX Designer</span>
                             </div>
                         </div>
-                        <div class="qualification-widget">
+                        <div class="qualification-widget" data-aos="fade-up" data-aos-duration="600" data-aos-delay="600">
                             <div class="circle">
                                 <div class="inner-circle"></div>
                             </div>
