fix: animation loading

--- a/app/scss/components/_preloader.scss
+++ b/app/scss/components/_preloader.scss
@@ -14,5 +14,5 @@ $bounce_height: 30px;
   align-items: center;
   z-index: 9999999999;
   justify-content: center;
-  background: #323644;
+  background: #fff;
 }
