fix: brand section all page

--- a/app/partials/pages/landing-4/_brand.njk
+++ b/app/partials/pages/landing-4/_brand.njk
@@ -6,28 +6,46 @@
                     <h6 class="subtitle">PROUD MARKETING <span class="text-primary d-inline">PARTNERS</span> WITH</h6>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                    <div class="brand-section-04__group">
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-1.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-2.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-3.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-4.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-5.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-4/logo-6.png" alt="sponsor">
-                        </div>
+            <div class="logo-slider">
+                <div class="logo-slider__track">
+                    <div class="slide">
+                        <img src="./image/l-1/logo-1.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-2.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-3.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-4.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-5.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-6.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-1.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-2.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-3.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-4.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-5.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-6.png" alt="sponsor">
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     {% endmacro %}
