--- a/app/scss/helpers/_animations.scss
+++ b/app/scss/helpers/_animations.scss
@@ -344,3 +344,7 @@
 .sonar-emitter-2::after {
   animation: sonarWave 2s linear infinite;
 }
+@keyframes logoscroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(calc(-220px * 7))}
+}
