--- a/app/partials/pages/landing-3/_brand.njk
+++ b/app/partials/pages/landing-3/_brand.njk
@@ -6,28 +6,46 @@
                     <h6 class="heading-dark">Trusted by 25,000+ Project Managers Worldwide</h6>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                    <div class="brand-section-03__group">
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-1.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-2.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-3.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-4.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-5.png" alt="sponsor">
-                        </div>
-                        <div class="single-brand">
-                            <img src="./image/l-2/logo-6.png" alt="sponsor">
-                        </div>
+            <div class="logo-slider">
+                <div class="logo-slider__track">
+                    <div class="slide">
+                        <img src="./image/l-1/logo-1.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-2.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-3.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-4.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-5.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-6.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-1.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-2.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-3.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-4.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-5.png" alt="sponsor">
+                    </div>
+                    <div class="slide">
+                        <img src="./image/l-1/logo-6.png" alt="sponsor">
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     {% endmacro %}
