--- a/app/partials/pages/blog-details/_content.njk
+++ b/app/partials/pages/blog-details/_content.njk
@@ -187,12 +187,12 @@
                             </div>
                         </div>
                         <div class="blog-details-area__content--quote">
-                            <div class="blog-quote">
-                                <p>"I have worked with different themes, but this one stands out in terms of beautiful organization. The theme also has many example pages and a host of components to choose from.”</p>
-                                <div class="name-block">
-                                    <h6>Michle Jhon Smith <span class="text-primary"> - CEO & Founder</span></h6>
-                                </div>
-                            </div>
+                            <blockquote>
+                                    <p>"I have worked with different themes, but this one stands out in terms of beautiful organization. The theme also has many example pages and a host of components to choose from.”</p>
+                                    <div class="name-block">
+                                        <h6>Michle Jhon Smith <span class="text-primary"> - CEO & Founder</span></h6>
+                                    </div>
+                            </blockquote>
                         </div>
                         <div class="blog-details-area__content--two">
                             <div class="content-two">
