--- a/app/partials/pages/landing-1/_portfolio.njk
+++ b/app/partials/pages/landing-1/_portfolio.njk
@@ -51,7 +51,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 grid-item portfolio-3 portfolio-2">
-                    <a href="#" class="portfolio-card active">
+                    <a href="#" class="portfolio-card">
                         <img src="./image/l-1/project-3.png" alt="portfolio" class="w-100">
                         <div class="portfolio-body">
                             <div class="content">
