--- a/app/scss/components/_mixed.scss
+++ b/app/scss/components/_mixed.scss
@@ -574,7 +574,7 @@
        } 
     }
 }
-.blog-quote{
+blockquote{
     position: relative;
     border-radius: 3px;
     background: var(--bs-white-lilac);
