--- a/app/partials/components/Breadcrumb/_breadcrumb.njk
+++ b/app/partials/components/Breadcrumb/_breadcrumb.njk
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="breadcrumb__navigation">
-            <p class="breadcrumb__navigation--text">Home<span class="dot"></span><span class="page-text">{{option.pageName}}</span></p>
+            <p class="breadcrumb__navigation--text"><a class="d-block heading-dark" href="index.html">Home</a><span class="dot"></span><span class="page-text">{{option.pageName}}</span></p>
         </div>
     </div>
 {% endmacro %}
