--- a/app/scss/components/_breadcrumb.scss
+++ b/app/scss/components/_breadcrumb.scss
@@ -36,7 +36,7 @@
         font-weight: 500;
         line-height: 1.277777777777778;
         font-size: 16px;
-        color: var(--bs-black);
+        color: var(--bs-black) !important;
         span{
           display: block;
           color: var(--bs-gray);
